--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <center><b><font color=pink><font size=20><h1>FENOMENA KOREAN WAVE</h1></font size=20></font color=pink></b></center>
 
-<center><img src="Korean Wave.jpeg" alt="Image" height="800" width="533"/></center>
+<center><img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Lee_Jeno_NCT_Dream_Photoshoot_2023.jpg" alt="Image" height="800" width="533"/></center>
 
 <b><font color=teal><font size=15><p>Korean Wave</b> atau <i>Hallyu</i> adalah istilah yang diberikan untuk menyebut budaya populer yang berasal dari Korea Selatan 
 karena penyebarannya terjadi secara global di berbagai negara di dunia, termasuk Indonesia. Fenomena Korean Wave ini tidak hanya terjadi di kalangan muda-mudi saja, 
