--- a/index.html
+++ b/index.html
@@ -1,23 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HTML Dwi Kartika Aryani</title>
+<title>NASI GORENG ALA JODOH DWI</title>
 </head>
 
 <body>
 
-<center><b><font color=pink><font size=20><h1>FENOMENA KOREAN WAVE</h1></font size=20></font color=pink></b></center>
+<center><b><font color=pink><font size=20><h1>TRIK MEMBUAT NASI GORENG 
+ALA JAEMIN NCT</h1></font size=20></font color=pink></b></center>
 
-<center><img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Lee_Jeno_NCT_Dream_Photoshoot_2023.jpg" alt="Image" height="800" width="533"/></center>
+<font color=navy><font size=12><p>Nasi goreng merupakan makanan yang diminati 
+semua kalangan dan dapat dibuat dengan cara yang mudah. Karena cara membuatnya 
+yang mudah, terdapat banyak variasi dalam meresepkan nasi goreng. Salah satu 
+variasi dalam membuat nasi goreng, datang dari jodoh saya, Jaemin NCT. Jaemin NCT 
+memang sering kali membagikan resep-resep masakannya melalui <i>bubble</i> kepada 
+para penggemarnya. Kali ini, kita akan membahas resep membuat nasi goreng ala 
+Jaemin (JODOH DWI), karena resep ini mudah dibuat dan rasanya enak (APALAGI KALAU 
+MAKANNYA DISEBELAH JAEMIN SAMBIL DISUAPIN). Berikut merupakan resep nasi goreng 
+ala Jaemin NCT karena kalo nunggu jaemin yang masakin langsung, bisa-bisa kita 
+meninggal kelaparan. </p></font size=12></font color=navy>
 
-<b><font color=teal><font size=15><p>Korean Wave</b> atau <i>Hallyu</i> adalah istilah yang diberikan untuk menyebut budaya populer yang berasal dari Korea Selatan 
-karena penyebarannya terjadi secara global di berbagai negara di dunia, termasuk Indonesia. Fenomena Korean Wave ini tidak hanya terjadi di kalangan muda-mudi saja, 
-anak-anak hingga lansia banyak yang tepengaruh oleh Fenomena Korean Wave. Hal ini bisa dilihat dari kesukaan atau ketertarikan mereka kepada hal-hal yang berkaitan 
-dengan Negeri Ginseng ini, misalnya kepada aktor &#38; aktris nya, drama atau series nya, makanan, gaya berpakaian, hingga bahasa atau cara berbicara masyarakat 
-Korea Selatan.</p></font size=15></font color=teal>
+<center> 
+<table border="5" cellpadding="15">
+	<tr bgcolor="pink" >
+	<th> Bahan-Bahan </th>
+	<th> Jumlah </th>
+	</tr>
+	<tr>
+	<td> Nasi putih </td>
+	<td> 3 porsi </td>
+	</tr>
+	<tr>
+	<td> Bawang Bombai </td>
+	<td> 1 siung </td>
+	</tr>
+	<tr>
+	<td> Garam </td>
+	<td> secukupnya </td>
+	</tr>
+	<tr>
+	<td> Madu</td>
+	<td> 3 sdm </td>
+	</tr>
+	<tr>
+	<td> Oyster Sauce </td> 
+	<td> 1 sdm </td>
+	</tr>
+	<tr>
+	<td> Kecap Manis/Asin </td>
+	<td> 1 sdm </td>
+	</tr>
+	<tr>
+	<td> Olligodang </td>
+	<td> 1 sdm </td>
+	</tr>
+	<tr>
+	<td> Telur </td>
+	<td> 5 butir </td>
+	</tr>
+	<tr>
+	<td> Sosis </td>
+	<td> 3 buah </td>
+	</tr>
+	<tr>
+	<td> Olive Oil </td>
+	<td> 3 sdm </td>
+	</tr>
+</table>
+</center>
 
-
+<font color=navy><font size=12><p> Berikut merupakan cara membuat nasi goreng ala Jaemin NCT: 
+</p></font size=12></font color=navy>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YPrN_PCy0L0" title="YouTube video player" 
+frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
-
 </html>
