--- a/index.html
+++ b/index.html
@@ -1,79 +1,273 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>NASI GORENG ALA JODOH DWI</title>
-</head>
+<!-- NAVIGATION -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-navbar" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">M.A.</a>
+    </div>
 
-<body>
+    <!-- Collect the nav links for toggling -->
+    <div class="collapse navbar-collapse" id="portfolio-navbar">
 
-<center><b><font color=pink><font size=20><h1>TRIK MEMBUAT NASI GORENG 
-ALA JAEMIN NCT</h1></font size=20></font color=pink></b></center>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
+</nav>
 
-<font color=navy><font size=12><p>Nasi goreng merupakan makanan yang diminati 
-semua kalangan dan dapat dibuat dengan cara yang mudah. Karena cara membuatnya 
-yang mudah, terdapat banyak variasi dalam meresepkan nasi goreng. Salah satu 
-variasi dalam membuat nasi goreng, datang dari jodoh saya, Jaemin NCT. Jaemin NCT 
-memang sering kali membagikan resep-resep masakannya melalui <i>bubble</i> kepada 
-para penggemarnya. Kali ini, kita akan membahas resep membuat nasi goreng ala 
-Jaemin (JODOH DWI), karena resep ini mudah dibuat dan rasanya enak (APALAGI KALAU 
-MAKANNYA DISEBELAH JAEMIN SAMBIL DISUAPIN). Berikut merupakan resep nasi goreng 
-ala Jaemin NCT karena kalo nunggu jaemin yang masakin langsung, bisa-bisa kita 
-meninggal kelaparan. </p></font size=12></font color=navy>
+<!-- HERO SECTION -->
+<div class="jumbotron">
+  <div class="overlay"></div>
+  <div class="container hero-container">
 
-<center> 
-<table border="5" cellpadding="15">
-	<tr bgcolor="pink" >
-	<th> Bahan-Bahan </th>
-	<th> Jumlah </th>
-	</tr>
-	<tr>
-	<td> Nasi putih </td>
-	<td> 3 porsi </td>
-	</tr>
-	<tr>
-	<td> Bawang Bombai </td>
-	<td> 1 siung </td>
-	</tr>
-	<tr>
-	<td> Garam </td>
-	<td> secukupnya </td>
-	</tr>
-	<tr>
-	<td> Madu</td>
-	<td> 3 sdm </td>
-	</tr>
-	<tr>
-	<td> Oyster Sauce </td> 
-	<td> 1 sdm </td>
-	</tr>
-	<tr>
-	<td> Kecap Manis/Asin </td>
-	<td> 1 sdm </td>
-	</tr>
-	<tr>
-	<td> Olligodang </td>
-	<td> 1 sdm </td>
-	</tr>
-	<tr>
-	<td> Telur </td>
-	<td> 5 butir </td>
-	</tr>
-	<tr>
-	<td> Sosis </td>
-	<td> 3 buah </td>
-	</tr>
-	<tr>
-	<td> Olive Oil </td>
-	<td> 3 sdm </td>
-	</tr>
-</table>
-</center>
+    <h1 class="text-center hero-title">I'm Maria Antonietta, a front end web developer</h1>
 
-<font color=navy><font size=12><p> Berikut merupakan cara membuat nasi goreng ala Jaemin NCT: 
-</p></font size=12></font color=navy>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/YPrN_PCy0L0" title="YouTube video player" 
-frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
-picture-in-picture; web-share" allowfullscreen></iframe>
+    <ul class="list-inline text-center center-block social-links">
+      <li><a href="https://twitter.com/AntoniettaPerna" title="Follow me on twitter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.facebook.com/maria.a.perna.3" title="Follow me on facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+      <li><a href="https://codepen.io/antonietta/" title="Visit my Codepen projects" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i></a>
+      </li>
+    </ul>
 
-</body>
-</html>
+  </div>
+  <!-- /.container -->
+</div>
+<!-- /.jumbotron -->
+
+<!-- ABOUT -->
+<div id="about" class="about-section section">
+  <div class="container">
+    <div class="row">
+      <article class="col-sm-6 about-article">
+        <h2 class="page-header">About me</h2>
+        <p>
+          Have you got a website project where creativity, functionality and best practices meet? If you're looking for a CSS expert to turn your design into a beautiful website, I'm your girl.
+        </p>
+        <p>
+          I can help your business by building a gorgeous, modern website that attracts visitors and converts leads.
+        </p>
+        <p>
+          Feel free to browse my portfolio.
+        </p>
+      </article>
+      <!-- /.col -->
+      <article class="col-sm-6">
+        <h2 class="page-header">Skills</h2> HTML
+        <div class="progress">
+          <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+            <span class="sr-only">90% Complete (success)</span>
+          </div>
+        </div>
+        CSS
+        <div class="progress">
+          <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
+            <span class="sr-only">95% Complete</span>
+          </div>
+        </div>
+        Bootstrap
+        <div class="progress">
+          <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
+            <span class="sr-only">95% Complete (warning)</span>
+          </div>
+        </div>
+        JavaScript
+        <div class="progress">
+          <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+            <span class="sr-only">75% Complete (danger)</span>
+          </div>
+        </div>
+      </article>
+      <!-- /.col -->
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+</div>
+<!-- /.about-section -->
+
+<!-- PORTFOLIO -->
+<div id="portfolio" class="portfolio-section section">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="page-header">Portfolio</h2>
+      </div>
+      <!-- /.col -->
+    </div>
+    <!-- /.row -->
+    <div class="cards-container">
+      <article class="card">
+        <h3 class="card-title"><a href="https://codepen.io/antonietta/full/AXPQAv/" target="_blank">J. P. Sartre Tribute Page</a></h3>
+        <a href="https://codepen.io/antonietta/full/AXPQAv/" target="_blank">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/234228/sartre-site-small.png" alt="JP Sartre Tribute Page" class="card-img" />
+        </a>
+        <div class="card-inner">
+          <p class="card-text">
+            This is a HTML/CSS tribute page dedicated to the philosopher Jean-Paul Sartre, built to complete the first Code Camp project.
+          </p>
+          <h4 class="highlight card-subtitle">Technologies</h4>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Bootstrap</li>
+            <li>jQuery</li>
+            <li>CSS3 transition animations</li>
+          </ul>
+        </div>
+      </article>
+      <!-- /.card -->
+      <article class="card">
+        <h3 class="card-title"><a href="https://codepen.io/antonietta/full/MKXBQN/" target="_blank">Demo HTML Template with Material Design Lite</a></h3>
+        <a href="https://codepen.io/antonietta/full/MKXBQN/" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/234228/material-design-site-small.png" alt="Demo of Material Design Lite Framework" class="card-img" /></a>
+        <div class="card-inner">
+          <p class="card-text">
+            Kaptain Kitty is a demo HTML template that illustrates how to use the Material Design Lite library by Google.
+          </p>
+          <h4 class="highlight card-subtitle">Technologies</h4>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Material Design Lite</li>
+          </ul>
+        </div>
+        <!-- /.inner -->
+      </article>
+      <!-- /.card -->
+      <article class="card">
+        <h3 class="card-title"><a href="https://codepen.io/antonietta/full/bdEYwj/" target="_blank">Simple jQuery Interactive Tool for CSS mix-blend-mode Property</a></h3>
+        <a href="https://codepen.io/antonietta/full/bdEYwj/" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/234228/mix-blend-mode.png" alt="Demo of mix-blend-mode CSS Property" class="card-img" /></a>
+        <div class="card-inner">
+          <p class="card-text">
+            This simple tool gives immediate feedback to users when applying the CSS mix-blend-mode property to an image.
+          </p>
+          <h4 class="highlight card-subtitle">Technologies</h4>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>jQuery</li>
+          </ul>
+        </div>
+        <!-- /.card-inner -->
+      </article>
+      <!-- /.card -->
+      <article class="card">
+        <h3 class="card-title"><a href="https://codepen.io/antonietta/pen/XqMXWv" target="_blank">Dice Roll Game</a></h3>
+        <a href="https://codepen.io/antonietta/pen/XqMXWv" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/234228/dice-roll-game.png" alt="Dice Roll Game" class="card-img" /></a>
+        <div class="card-inner">
+          <p class="card-text">
+            Simple dice roll game: guess the number that comes up after the dice roll and you win.
+          </p>
+          <h4 class="highlight card-subtitle">Technologies</h4>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+        </div>
+        <!-- /.card-inner -->
+      </article>
+      <!-- /.card -->
+      <article class="card">
+        <h3 class="card-title"><a href="https://codepen.io/antonietta/pen/wmoYwx" target="_blank">Shopping Cart with Vue.js</a></h3>
+        <a href="https://codepen.io/antonietta/pen/wmoYwx" target="_blank"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/234228/shopping-cart-vue.png" alt="Shopping Cart with Vue.js" class="card-img" /></a>
+        <div class="card-inner">
+          <p class="card-text">
+            Simple shopping cart prototype using Vue.js
+          </p>
+          <h4 class="highlight card-subtitle">Technologies</h4>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Vue.js</li>
+          </ul>
+        </div>
+        <!-- /.card-inner -->
+      </article>
+      <!-- /.card -->
+    </div>
+    <!-- /.cards-container -->
+
+  </div>
+  <!-- /.container -->
+</div>
+<!-- /.portfolio-section -->
+
+<!-- CONTACT -->
+<div id="contact" class="contact-section">
+  <div class="container">
+    <div class="row">
+      <article class="col-sm-8">
+        <h3 class="article-title">Send a message</h3>
+        <form class="form-horizontal contact-form">
+          <div class="form-group">
+            <label for="inputName" class="col-sm-2 control-label">Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputName">
+            </div>
+            <!-- /.col-sm-10 -->
+          </div>
+          <!-- /.form-group -->
+
+          <div class="form-group">
+            <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail">
+            </div>
+            <!-- /.col-sm-10 -->
+          </div>
+          <!-- /.form-group -->
+
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-default">Send</button>
+            </div>
+            <!-- /.col-sm-10 -->
+          </div>
+          <!-- /.form-group -->
+        </form>
+      </article>
+      <!-- /.col -->
+      <article class="col-sm-4 connect-article">
+        <h3 class="article-title">Connect</h3>
+        <p>
+          I'm open to collaborations on website projects. If you're looking for a CSS guru to make your digital home shine, don't hesitate to connect with me on ...
+        </p>
+        <ul class="list-inline text-center center-block social-links">
+          <li><a href="https://twitter.com/AntoniettaPerna" title="Follow me on twitter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.facebook.com/maria.a.perna.3" title="Follow me on facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="https://codepen.io/antonietta/" title="Visit my Codepen projects" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i></a>
+          </li>
+        </ul>
+      </article>
+      <!-- /.col -->
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+</div>
+<!-- /.contact-section -->
+
+<!-- FOOTER -->
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        coded by <a href="http://mariaantoniettaperna.com" target="_blank">Maria Antonietta Perna</a>
+      </div>
+      <!-- /.col -->
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+</footer>
